--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-list-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJs REST API for MyList feature",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
@@ -38,6 +38,11 @@
     "verror": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5"
   }
 }
